# Image-Capture-in-FARD

./: .gitignore  C2PA_COMPARISON.md  README.md  ROADMAP-IF-1.0.md  SPEC-IF-1.0.md  SPEC-PERC-1.0.md
apps/: capture_explain.fard  capture_session.fard  image_chain.fard  image_claim.fard  image_diff.fard  image_explain.fard  phase_adversarial.fard  phase_e2_lighting.fard  phase_e3_reencode.fard  phase_e4_movement.fard  phase_e_stability.fard
cfid_go_if/: README.md  go.mod  ifreceipt.go  ifreceipt_test.go
cfid_kotlin_if/: README.md
cfid_python_if/: README.md  pyproject.toml
cfid_python_if/src/ifreceipt/: __init__.py
cfid_python_if/tests/: test_ifreceipt.py
cfid_rust_if/: Cargo.toml  README.md
cfid_rust_if/src/: lib.rs
cfid_rust_if/tests/: integration_test.rs
cfid_swift_if/: .gitignore  IFReceipt.d  Package.swift  README.md  main.d
cfid_swift_if/.build/: build.db  debug.yaml
cfid_swift_if/Sources/IFReceipt/: IFReceipt.swift
cfid_ts_if/: README.md  package-lock.json  package.json  tsconfig.json
cfid_ts_if/src/: index.ts
cfid_ts_if/test/: index.test.mjs
conformance/: CONFORMANCE.md  if_vectors.json
receipts/: sha256_d3ac840932f9495913fd00683244407c3f0e94027ac6f059140bee0edd29b25e.json
src/core/: exif_claims.fard  if_id.fard  image_read.fard  image_receipt.fard  perc_id.fard
tests/: test_conformance_vectors.fard  test_exif_claims.fard  test_if_id.fard  test_image_chain.fard  test_image_claim.fard  test_image_diff.fard  test_image_receipt.fard  test_perc_id.fard
tools/: capture_macbook.sh
(+574 files in other folders)
